--- a/src/WhereGroup/MetadorBundle/Resources/config/parameters.yml
+++ b/src/WhereGroup/MetadorBundle/Resources/config/parameters.yml
@@ -7,7 +7,7 @@ parameters:
     metador.templates.main: "WhereGroupMetadorBundle:Design:main.html.twig"
     metador.templates.login: ":Design:login.html.twig"
     metador.hits: 20
-    metador.gdi.de.url: "https://testsuite.gdi-de.org/gdi/download?id=wsdl"
+    metador.gdi.de.url: "http://testsuite.gdi-de.org/gdi/download?id=wsdl"
     metador.gdi.de.user: ~
     metador.gdi.de.password: ~
     metador.gdi.de.testlevel:
